; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_chunk_adaptive.c_get_default_chunk_sizing_fn_oid.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_chunk_adaptive.c_get_default_chunk_sizing_fn_oid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INT4OID = common dso_local global i32 0, align 4
@INT8OID = common dso_local global i32 0, align 4
@INTERNAL_SCHEMA_NAME = common dso_local global i32 0, align 4
@DEFAULT_CHUNK_SIZING_FN_NAME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @get_default_chunk_sizing_fn_oid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_default_chunk_sizing_fn_oid() #0 {
  %1 = alloca [3 x i32], align 4
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = getelementptr inbounds [3 x i32], [3 x i32]* %1, i64 0, i64 0
  %6 = load i32, i32* @INT4OID, align 4
  store i32 %6, i32* %5, align 4
  %7 = getelementptr inbounds i32, i32* %5, i64 1
  %8 = load i32, i32* @INT8OID, align 4
  store i32 %8, i32* %7, align 4
  %9 = getelementptr inbounds i32, i32* %7, i64 1
  %10 = load i32, i32* @INT8OID, align 4
  store i32 %10, i32* %9, align 4
  %11 = load i32, i32* @INTERNAL_SCHEMA_NAME, align 4
  %12 = call i32 @makeString(i32 %11)
  %13 = load i32, i32* @DEFAULT_CHUNK_SIZING_FN_NAME, align 4
  %14 = call i32 @makeString(i32 %13)
  %15 = call i32* @list_make2(i32 %12, i32 %14)
  store i32* %15, i32** %2, align 8
  store i32 3, i32* %3, align 4
  %16 = load i32*, i32** %2, align 8
  %17 = load i32, i32* %3, align 4
  %18 = getelementptr inbounds [3 x i32], [3 x i32]* %1, i64 0, i64 0
  %19 = call i32 @LookupFuncName(i32* %16, i32 %17, i32* %18, i32 0)
  store i32 %19, i32* %4, align 4
  %20 = load i32, i32* %4, align 4
  ret i32 %20
}

declare dso_local i32* @list_make2(i32, i32) #1

declare dso_local i32 @makeString(i32) #1

declare dso_local i32 @LookupFuncName(i32*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
